# ZGE

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
ZGameEngine/: CMakeLists.txt  ZGameEngine.cpp  ZGameEngine.h
core/: CMakeLists.txt  input.h  log.cpp  log.h  resource.cpp  resource.h  resource_test.cpp  signal.h  utils.h  window.cpp  window.h
examples/sandbox/: CMakeLists.txt
examples/sandbox/assets/shaders/: pixel.hlsl  vert.hlsl
main/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
render/: CMakeLists.txt  render_minimal.h  renderer.cpp  renderer.h
sandbox/: CMakeLists.txt
sandbox/assets/: default.slang
scene/: CMakeLists.txt  shader.h
src/: CMakeLists.txt
src/components/: CMakeLists.txt  camera.h  character_controller.h  lights.h  mesh_instance.h  parent.h  transform.h
src/core/: CMakeLists.txt  extent.h  key.h  log.cpp  log.h  mouse_motion.h  signal.h  utils.cpp  utils.h
src/core/util/: extent.h
src/dbg/: CMakeLists.txt  debug_layer.cpp  debug_layer.h
src/editor/: CMakeLists.txt
src/ext/: CMakeLists.txt
src/ext/imgui/: CMakeLists.txt
src/ext/imgui/examples/example_glfw_opengl2/: example_glfw_opengl2.vcxproj
src/ext/imgui/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj
src/ext/imgui/examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj
src/ext/imgui/examples/example_sdl2_directx11/: example_sdl2_directx11.vcxproj
src/ext/imgui/examples/example_sdl2_opengl2/: example_sdl2_opengl2.vcxproj
src/ext/imgui/examples/example_sdl2_opengl3/: example_sdl2_opengl3.vcxproj
src/ext/imgui/examples/example_sdl2_sdlrenderer2/: example_sdl2_sdlrenderer2.vcxproj
src/ext/imgui/examples/example_sdl2_vulkan/: example_sdl2_vulkan.vcxproj
src/ext/imgui/examples/example_sdl3_opengl3/: example_sdl3_opengl3.vcxproj
src/ext/imgui/examples/example_sdl3_sdlrenderer3/: example_sdl3_sdlrenderer3.vcxproj
src/ext/imgui/examples/example_sdl3_vulkan/: example_sdl3_vulkan.vcxproj
src/ext/imgui/examples/example_win32_directx12/: example_win32_directx12.vcxproj
src/ext/imgui/examples/example_win32_directx9/: example_win32_directx9.vcxproj
src/ext/imgui/examples/example_win32_opengl3/: example_win32_opengl3.vcxproj
src/main/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
src/platform/: CMakeLists.txt  window.cpp  window.h
src/platform/sdl3/: CMakeLists.txt  sdl_main.cpp
src/platform/windows/: CMakeLists.txt  win_main.cpp  win_window.cpp  win_window.h
src/render/: CMakeLists.txt  camera.cpp  camera.h  mesh_geometry.cpp  mesh_geometry.h  render_camera.cpp  render_camera.h  render_mesh.cpp  render_mesh.h  renderer.cpp  renderer.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
